--- a/static/index.html
+++ b/static/index.html
@@ -29,12 +29,13 @@
     </div>
   </div>
 
-  <!-- Modal for creating new secrets -->
+  <!-- Modal for creating or editing secrets -->
   <div id="secretModal" class="modal">
     <div class="modal-content">
       <span class="close">&times;</span>
-      <h2>Create New Secret</h2>
+      <h2 id="modalTitle">Create New Secret</h2>
       <form id="secretForm">
+        <input type="hidden" id="actionType" value="create"> <!-- To track whether we are creating or editing -->
         <div>
           <label for="secretName">Secret Name:</label>
           <input type="text" id="secretName" name="secretName" required>
@@ -47,7 +48,7 @@
           <label for="dataValue">Data Value:</label>
           <input type="text" id="dataValue" name="dataValue" required>
         </div>
-        <button type="submit">Create Secret</button>
+        <button type="submit">Save Secret</button>
       </form>
     </div>
   </div>
